@@ -45,6 +45,9 @@ plugins {
     // https://github.com/ethauvin/semver-gradle
     alias(libs.plugins.semver)
     alias(libs.plugins.licensereport)
+
+    id("maven-publish")
+    id("version-catalog")
 }
 
 // save version to main resources
@@ -53,7 +56,14 @@ plugins {
 // version with -beta is currently not supported by jpackage (maybe windows --app-version)
 // java.lang.IllegalArgumentException: "Version [3.0.0-beta] contains invalid component [0-beta]"
 semver {
-    properties = "src/main/resources/mzmineversion.properties"
+    def versionFile = getLayout().getProjectDirectory().dir("src/main/resources").file("mzmineversion.properties").getAsFile()
+    properties = versionFile.toString()
+}
+
+catalog {
+    versionCatalog {
+        from(files("$rootDir/gradle/libs.versions.toml"))
+    }
 }
 
 // version is now in version.properties
@@ -113,13 +123,13 @@ repositories {
     mavenCentral()
     // mavenLocal()
     maven { url = "https://repo.maven.apache.org/maven2" }
-    // local libraries
+    // local repo needs to be early before other repos otherwise the resolving of local libs failed
     maven { url = uri("file://" + layout.projectDirectory.dir("../local-repo")) }
     // For jmzml, etc.
     maven { url = "https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/" }
     // For SIRIUS ID modules
     maven { url = "https://bio.informatik.uni-jena.de/repository/libs-oss/" }
-    maven { url = "https://jitpack.io" }
+//    maven { url = "https://jitpack.io" } // should not be used at best - better push local
     maven { url = "https://www.xypron.de/repository/" }
     // For cpdetector
 //    maven { url = "https://nexus.nuiton.org/nexus/content/groups/releases/" }
@@ -185,7 +195,6 @@ dependencies {
     implementation(libs.bundles.batik)
     implementation(libs.bundles.okhttp)
     implementation "org.postgresql:postgresql:9.3-1102-jdbc41"
-    implementation "org.rsc.chemspider:chemspider-api:1.0.0"
     implementation "org.freehep:freehep-graphicsio-emf:2.4"
     implementation("eu.hansolo.fx:charts:21.0.7")
     implementation group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
@@ -222,6 +231,9 @@ dependencies {
     // the defacto standard parser in jackson?
     implementation(libs.woodstox.core)
     implementation(libs.aalto.xml)
+
+    // test only
+    testImplementation(libs.bundles.mzio.test)
 }
 
 /*
@@ -287,10 +299,23 @@ application {
             "--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
             "--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
             "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
+            // required for getting log file
+            '--add-opens=java.logging/java.util.logging=ALL-UNNAMED',
 
             // logging
             "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration"
     ]
+}
+
+def EXTERNAL_TOOLS_DESTINATION =
+        !OperatingSystem.current().isMacOsX() ? getLayout().getBuildDirectory().dir("jpackage/mzmine/external_tools").get()
+                : getLayout().getBuildDirectory().dir("jpackage/mzmine.app/Contents/external_tools").get()
+def EXTERNAL_TOOLS_SRC = getLayout().getProjectDirectory().dir("../external_tools")
+tasks.jpackage.doFirst {
+    copy {
+        from EXTERNAL_TOOLS_SRC
+        into EXTERNAL_TOOLS_DESTINATION
+    }
 }
 
 /*
@@ -392,6 +417,8 @@ runtime {
                    "-XX:MaxRAMPercentage=80",
                    "-enableassertions",
                    "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration",
+                   "-Djava.net.useSystemProxies=true",
+                   "--add-opens=java.logging/java.util.logging=ALL-UNNAMED",
                    "--enable-preview",
         ]
     }
@@ -600,3 +627,35 @@ tasks.compileJava.dependsOn(checkLicense, copyLicenseInformationToResources, cop
 tasks.processResources.dependsOn(copyLicenseInformationToResources, copyLicenseInformationToBuild)
 tasks.processResources.dependsOn(copyLicenseInformationToResources, copyLicenseInformationToBuild)
 
+
+// make sure the publish action is run after the semver plugin has been evaluated,
+// otherwise the version will always be 1.0.0
+afterEvaluate {
+    publishing {
+        publications {
+            register("mzmine-community-package", MavenPublication) {
+                from(components["java"])
+                pom {
+                    name = "mzmine-community"
+                    description = "mzmine-community"
+                    artifactId = "mzmine-community"
+                    url = "https://github.com/mzmine/mzmine"
+                    version = semver.version
+                    developers {
+                        developer {
+                            id = "mzmine"
+                            name = "mzmine"
+                        }
+                    }
+                }
+            }
+
+            register("versionCatalog", MavenPublication) {
+                from(components["versionCatalog"])
+                version = semver.version
+                artifactId = 'mzmine-community-version-catalog'
+                // This is important so the published artifact registers as a .toml file, rather than a library
+            }
+        }
+    }
+}
